--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-    height: auto;
+    height: 100vh;
     background-image: url("bg.jpg");
     background-size: cover;
     background-position: center;
@@ -345,6 +345,7 @@ a button {
         }
     }
 }
+
 
 
 
